Using native promises, no need for q library yet

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "koa-router": "^4.3.2",
     "koa-static": "^1.4.9",
     "koa-swig": "^2.0.0",
-    "mysql": "^2.6.2",
-    "q": "^1.4.1"
+    "mysql": "^2.6.2"
   }
 }
